--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <artifactId>jackson-databind</artifactId>
             <version>2.12.5</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.26</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.7</version>
+        </dependency>
     </dependencies>
 
     <build>
