--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.driver= com.mysql.cj.jdbc.Driver
-db.user = root
-db.password = 12345678
-db.url = jdbc:mysql://localhost:3306/laba_example
+db.driver=com.mysql.cj.jdbc.Driver
+db.user=root
+db.password=root
+db.url=jdbc:mysql://localhost:3306/laba_example
